Fix text align and focus styles

--- a/packages/core/src/components/button/button.css
+++ b/packages/core/src/components/button/button.css
@@ -4,6 +4,8 @@
 .hds-button {
   --border-width: 2px;
   --color: inherit;
+  --outline-gutter: 2px;
+  --outline-width: 3px;
 
   align-content: flex-start;
   align-items: center;
@@ -15,7 +17,6 @@
   justify-content: center;
   padding: 0 var(--spacing-2-xs);
   position: relative;
-  text-align: left;
   vertical-align: top;
 }
 
@@ -69,8 +70,6 @@
 /* FOCUS OUTLINE */
 
 .hds-button::after {
-  --gutter: 2px;
-  --outline-width: 3px;
   --size: 100%;
 
   border: var(--outline-width) solid transparent;
@@ -81,8 +80,13 @@
 }
 
 .hds-button:focus::after {
-  --size: calc(100% + calc(var(--outline-width) * 2 + var(--border-width) * 2 + var(--gutter) * 2));
+  --size: calc(100% + calc(var(--outline-width) * 2 + var(--border-width) * 2 + var(--outline-gutter) * 2));
   border-color: var(--focus-outline-color);
+}
+
+/* submit input */
+input[type="submit"].hds-button:focus {
+  box-shadow: 0 0 0 var(--outline-gutter) var(--submit-input-focus-gutter-color), 0 0 0 calc(var(--outline-gutter) + var(--outline-width)) var(--focus-outline-color);
 }
 
 /* LABEL */
@@ -204,6 +208,7 @@ input[type="submit"].hds-button--small {
   --color-disabled: var(--color-label-button-primary-disabled);
 
   --focus-outline-color: var(--color-focus-outline-button-primary);
+  --submit-input-focus-gutter-color: var(--color-white);
 }
 
 /* SECONDARY */
@@ -229,6 +234,7 @@ input[type="submit"].hds-button--small {
   --color-disabled: var(--color-label-button-secondary-disabled);
 
   --focus-outline-color: var(--color-focus-outline-button-secondary);
+  --submit-input-focus-gutter-color: var(--color-white);
 }
 
 /* SUPPLEMENTARY */
@@ -253,6 +259,7 @@ input[type="submit"].hds-button--small {
   --color-disabled: var(--color-label-button-supplementary-disabled);
 
   --focus-outline-color: var(--color-focus-outline-button-supplementary);
+  --submit-input-focus-gutter-color: transparent;
 }
 
 /* UTILITY */
